--- a/src/layout.scss
+++ b/src/layout.scss
@@ -22,5 +22,9 @@
         background-color: rgb(198, 198, 255);
         max-width: 640px;
     }
+
+    .content{
+        height: calc(100vh - 100px);
+    }
   
 }
