React Router Dom

--- a/src/routes/homePage/homePage.scss
+++ b/src/routes/homePage/homePage.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .homePage{
     display: flex;
     height: 100%;
@@ -13,22 +15,44 @@
             gap: 50px;
             height: 100%;
 
+            @include md{
+                padding: 0px;
+            }
+
+            @include sm{
+                justify-content: flex-start;
+            }
+
             .title{
                 font-size: 56px;
+
+                @include lg{
+                    font-size: 40px;
+                }
             }
 
             .boxes{
                 display: flex;
                 justify-content: space-between;
 
+                @include sm{
+                    display: none;
+                }
+
                 h1{
                     font-size: 30px;
+
+                    @include lg{
+                        font-size: 20px;
+                    }
                 }
 
                 h2{
                     font-size: 20px;
                     font-weight: 300;
                 }
+
+
             }
         }
     }
@@ -44,6 +68,14 @@
             width: 115%;
             position: absolute;
             right: 0;
+
+            @include lg{
+                width: 100%;
+            }
+        }
+
+        @include md{
+            display: none;
         }
     }
 }
