--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -1,6 +1,9 @@
+@import "../../responsive.scss";
 .searchBar{
 
     .type{
+
+      
         button{
             padding: 16px 36px;
             border: 1px solid #999;
@@ -17,6 +20,7 @@
             &:first-child{
                 border-top-left-radius: 5px;
                 border-right: none;
+
             }
             &:last-child{
                 border-top-right-radius: 5px;
@@ -32,10 +36,38 @@
         gap: 5px;
         height: 64px;
 
+        @include sm {
+            flex-direction: column;
+            border: none;
+        }
+
         input{
             width: 200px;
             border: none;
             padding: 0px 10px;
+
+            @include lg{
+                padding: 0px 5px;
+
+                &:nth-child(2),&:nth-child(3){
+                    width: 140px;
+                }
+            }
+            @include md{
+                width: 200px;
+                &:nth-child(2),&:nth-child(3){
+                    width: 200px;
+                }
+            }
+
+            @include sm{
+                width: auto;
+                &:nth-child(2),&:nth-child(3){
+                    width: auto;
+                }
+                padding: 20px;
+                border: 1px solid #999;
+            }
         }
 
         button{
@@ -47,6 +79,10 @@
             img{
                 width: 24px;
                 height: 24px;
+            }
+
+            @include sm{
+                padding: 10px;
             }
         }
     }
