--- a/src/routes/Lists/listPage.scss
+++ b/src/routes/Lists/listPage.scss
@@ -1,3 +1,17 @@
-.listPage{
-    
+.listPage {
+  display: flex;
+  height: 100%;
+
+  .listContainer {
+    flex: 3;
+
+    .warpper{
+        padding-right: 50px;
+    }
+  }
+
+  .mapContianer {
+    flex: 2;
+    background-color: #fcf5f3;
+  }
 }
