--- a/src/routes/Lists/listPage.scss
+++ b/src/routes/Lists/listPage.scss
@@ -5,8 +5,12 @@
   .listContainer {
     flex: 3;
 
-    .warpper{
+    .wrapper{
         padding-right: 50px;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        overflow-y: scroll;
     }
   }
 
