--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -1,54 +1,55 @@
-.filter{
+.filter {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  h1 {
+    font-weight: 300;
+    font-size: 24px;
+  }
+
+  .item {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 2px;
 
-    h1{
-        font-weight: 300;
-        font-size: 24px;
+    label {
+      font-size: 14px;
+      font-weight: 300;
     }
 
-    .item{
-        display: flex;
-        flex-direction: column;
-        gap: 2px;
-
-        label{
-            font-size: 14px;
-            font-weight: 300;
-        }
-
-        input,select{
-            width: 100px;
-            padding: 20px;
-            border: 1px solid #e0e0e0;
-            border-radius: 5px;
-            font-size: 14px;
-        }
+    input,
+    select {
+      width: 100px;
+      padding: 20px;
+      border: 1px solid #e0e0e0;
+      border-radius: 5px;
+      font-size: 14px;
     }
+  }
 
-    .top{
-        input{
-            width: 100%;
-        }
+  .top {
+    input {
+      width: 100%;
     }
+  }
 
-    .bottom{
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
+  .bottom {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 
-        button{
-            width: 100px;
-            padding: 10px;
-            border: none;
-            background-color: #fece51;
-            cursor: pointer;
+    button {
+      width: 100px;
+      padding: 10px;
+      border: none;
+      background-color: #fece51;
+      cursor: pointer;
 
-            img{
-                width: 24px;
-                height: 24px;
-            }
-        }
+      img {
+        width: 24px;
+        height: 24px;
+      }
     }
+  }
 }
