--- a/src/routes/Layout/layout.scss
+++ b/src/routes/Layout/layout.scss
@@ -1,7 +1,7 @@
 @import "../../responsive.scss";
 
 .layout{
-    height: 100vh;
+    height: 100%;
     max-width: 1366px;
     margin-left:auto;
     margin-right: auto;
@@ -26,5 +26,23 @@
     .content{
         height: calc(100vh - 100px);
     }
+
+    ::-webkit-scrollbar{
+        width: 5px;
+        height:12px;
+      }
+      
+        ::-webkit-scrollbar-track{
+        background-color:transparent;
+      }
+      
+      ::-webkit-scrollbar-thumb{
+        background: #fece51;
+      }
+        
+      ::-webkit-scrollbar-thumb:hover{
+        background: #fba5a6;
+      } 
+      
   
 }
