--- a/src/routes/Lists/listPage.scss
+++ b/src/routes/Lists/listPage.scss
@@ -4,13 +4,16 @@
 
   .listContainer {
     flex: 3;
+    height: 100%;
 
     .wrapper{
         padding-right: 50px;
+        height: 100%;
         display: flex;
         flex-direction: column;
         gap: 50px;
         overflow-y: scroll;
+        padding-bottom: 50px;
     }
   }
 
