--- a/src/routes/SinglePage/singlePage.scss
+++ b/src/routes/SinglePage/singlePage.scss
@@ -105,6 +105,7 @@
     background-color: #fcf5f3;
     height: 100%;
     overflow-y: scroll;
+    padding-bottom: 30px;
 
     @include md {
       flex: none;
