--- a/src/routes/Layout/layout.scss
+++ b/src/routes/Layout/layout.scss
@@ -1,7 +1,7 @@
 @import "../../responsive.scss";
 
 .layout{
-    height: 100%;
+    height: 100vh;
     max-width: 1366px;
     margin-left:auto;
     margin-right: auto;
@@ -9,17 +9,14 @@
     padding-right: 20px;
 
     @include lg{
-        background-color: rgb(236, 236, 191);
         max-width: 1280px;
     }
 
     @include md{
-        background-color: rgb(223, 223, 223);
         max-width: 764px;
     }
 
     @include sm{
-        background-color: rgb(198, 198, 255);
         max-width: 640px;
     }
 
@@ -30,6 +27,10 @@
     ::-webkit-scrollbar{
         width: 5px;
         height:12px;
+        @include sm{
+          width: 0px;
+          height: 0px;
+        }
       }
       
         ::-webkit-scrollbar-track{
