--- a/src/routes/SinglePage/singlePage.scss
+++ b/src/routes/SinglePage/singlePage.scss
@@ -167,6 +167,11 @@
         padding: 20px 10px;
         background-color: white;
         border-radius: 10px;
+
+        @include sm{
+          flex-direction: column;
+          gap: 20px;
+        }
       }
 
       .sizes {
