--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -14,14 +14,13 @@
     gap: 2px;
 
     label {
-      font-size: 14px;
-      font-weight: 300;
+      font-size: 10px;
     }
 
     input,
     select {
       width: 100px;
-      padding: 20px;
+      padding: 10px;
       border: 1px solid #e0e0e0;
       border-radius: 5px;
       font-size: 14px;
@@ -37,14 +36,15 @@
   .bottom {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
 
     button {
       width: 100px;
       padding: 10px;
       border: none;
-      background-color: #fece51;
       cursor: pointer;
+      background-color: #fece51;
 
       img {
         width: 24px;
