--- a/src/routes/Lists/listPage.scss
+++ b/src/routes/Lists/listPage.scss
@@ -1,3 +1,4 @@
+@import "../../responsive.scss";
 .listPage {
   display: flex;
   height: 100%;
@@ -21,5 +22,10 @@
     flex: 2;
     height: 100%;
     background-color: #fcf5f3;
+
+    @include md{
+      display: none;
+    }
+
   }
 }
