--- a/client/src/routes/profilePage/profilePage.scss
+++ b/client/src/routes/profilePage/profilePage.scss
@@ -59,6 +59,16 @@
           border-radius: 50%;
           object-fit: cover;
         }
+
+        button{
+          width: 100px;
+          background-color: teal;
+          padding: 10px 20px;
+          border: none;
+          border-radius: 5px;
+          color: white;
+          cursor: pointer;
+        }
       }
     }
   }
